tests/errors/character.c
+=- 123 coronavirus . , sitio __ _ / \
